--- a/Base.lproj/MainMenu.xib
+++ b/Base.lproj/MainMenu.xib
@@ -49,7 +49,7 @@
             </items>
             <point key="canvasLocation" x="43" y="-154"/>
         </menu>
-        <window title="KnockKnock" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="371" userLabel="Main Window">
+        <window title="KnockKnock" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="371" userLabel="Main Window">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <rect key="contentRect" x="0.0" y="0.0" width="1295" height="671"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="769"/>
@@ -66,7 +66,7 @@
                         <rect key="frame" x="-5" y="52" width="400" height="468"/>
                         <clipView key="contentView" drawsBackground="NO" id="GbW-la-76n">
                             <rect key="frame" x="0.0" y="0.0" width="400" height="468"/>
-                            <autoresizingMask key="autoresizingMask"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" tag="99" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="75" viewBased="YES" floatsGroupRows="NO" id="zYP-0r-U2A">
                                     <rect key="frame" x="0.0" y="0.0" width="400" height="468"/>
@@ -176,7 +176,7 @@
                         <rect key="frame" x="427" y="52" width="868" height="468"/>
                         <clipView key="contentView" drawsBackground="NO" id="LBx-qs-tgi">
                             <rect key="frame" x="0.0" y="0.0" width="868" height="468"/>
-                            <autoresizingMask key="autoresizingMask"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="75" viewBased="YES" id="537">
                                     <rect key="frame" x="0.0" y="0.0" width="868" height="468"/>
@@ -694,9 +694,7 @@
         <customObject id="494" customClass="AppDelegate">
             <connections>
                 <outlet property="categoryTableController" destination="SmD-QP-397" id="PIf-PG-Sg9"/>
-                <outlet property="closeButton" destination="eD8-BN-Z1D" id="pgJ-gh-v2W"/>
                 <outlet property="compareButton" destination="JbU-ET-kri" id="hvZ-yH-6hm"/>
-                <outlet property="friends" destination="gD4-T8-B0H" id="bob-rW-SSv"/>
                 <outlet property="itemTableController" destination="8VH-uv-w4O" id="zNb-sJ-msd"/>
                 <outlet property="logoButton" destination="HoI-FQ-vTI" id="bzc-wu-4Hv"/>
                 <outlet property="progressIndicator" destination="839" id="870"/>
@@ -720,90 +718,10 @@
                 <outlet property="itemTableView" destination="537" id="0xr-LE-bN9"/>
             </connections>
         </customObject>
-        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="gD4-T8-B0H" userLabel="Friends">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
-            <rect key="contentRect" x="2843" y="305" width="767" height="288"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="769"/>
-            <view key="contentView" id="zIY-EJ-oYy">
-                <rect key="frame" x="0.0" y="0.0" width="767" height="288"/>
-                <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <button tag="-1" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eD8-BN-Z1D">
-                        <rect key="frame" x="639" y="13" width="115" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <buttonCell key="cell" type="push" title="Close" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="1mP-i0-2e4">
-                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" size="13" name="Menlo-Regular"/>
-                        </buttonCell>
-                        <connections>
-                            <action selector="closeFriendsWindow:" target="494" id="4tu-GP-sAX"/>
-                        </connections>
-                    </button>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G5i-Vw-RGw">
-                        <rect key="frame" x="72" y="210" width="623" height="63"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Mahalo to the &quot;Friends of Objective-See&quot;" id="JSF-ba-pCy">
-                            <font key="font" size="32" name="AvenirNextCondensed-Regular"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.69999999999999996" id="Gfs-Np-1jw">
-                        <rect key="frame" x="318" y="162" width="130" height="48"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsKandji" id="vrN-sB-wcX"/>
-                    </imageView>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.80000000000000004" id="b17-Nd-hxm">
-                        <rect key="frame" x="297" y="108" width="162" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsPANW" id="e0j-bE-NRv"/>
-                    </imageView>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.90000000000000002" id="b4B-9H-cT6">
-                        <rect key="frame" x="510" y="100" width="215" height="48"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsMacPaw" id="Alj-pV-sHh"/>
-                    </imageView>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.80000000000000004" id="6by-eR-wLD">
-                        <rect key="frame" x="228" y="47" width="154" height="37"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsHuntress" id="di1-wb-JTk"/>
-                    </imageView>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.80000000000000004" id="CAM-Bq-edw">
-                        <rect key="frame" x="673" y="50" width="74" height="34"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsiVerify" id="07Y-kJ-i5u"/>
-                    </imageView>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.80000000000000004" id="xAG-jP-WXK">
-                        <rect key="frame" x="436" y="44" width="173" height="46"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsMalwarebytes" id="X6T-y4-hd1"/>
-                    </imageView>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.80000000000000004" id="Sq3-jh-ewD">
-                        <rect key="frame" x="20" y="47" width="150" height="39"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Friends1Password" id="BfP-Ug-e2w"/>
-                    </imageView>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="Kw9-67-ETu">
-                        <rect key="frame" x="148" y="95" width="97" height="57"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsJamf" id="DfP-NZ-UVm"/>
-                    </imageView>
-                </subviews>
-            </view>
-            <point key="canvasLocation" x="614.5" y="-749"/>
-        </window>
     </objects>
     <resources>
         <image name="Compare" width="128" height="128"/>
         <image name="CompareAlternate" width="128" height="128"/>
-        <image name="Friends1Password" width="272" height="52"/>
-        <image name="FriendsHuntress" width="800" height="198"/>
-        <image name="FriendsJamf" width="328" height="114"/>
-        <image name="FriendsKandji" width="1944" height="494"/>
-        <image name="FriendsMacPaw" width="2034" height="335"/>
-        <image name="FriendsMalwarebytes" width="2500" height="403"/>
-        <image name="FriendsPANW" width="1312" height="240"/>
-        <image name="FriendsiVerify" width="500" height="180"/>
         <image name="NSActionTemplate" width="20" height="20"/>
         <image name="NSColorPanel" width="32" height="32"/>
         <image name="Preferences" width="128" height="128"/>
